fix italic in Markdown file are not readable #81

--- a/src/theme/code.scss
+++ b/src/theme/code.scss
@@ -74,3 +74,7 @@ tt {
 pre {
     background-color: $bg-color !important;
 }
+
+.pl-mi {
+    color: #ccc !important;
+}
